Address case for invalid input

--- a/index.html
+++ b/index.html
@@ -57,6 +57,9 @@
                         }else{
                             console.log("It's a draw! " + "You: " + humanScore + " Computer: " + computerScore);
                         }
+                    }//Input validation
+                    else{
+                        console.log("Invalid input.");
                     }
             }
                 //Game will not end until either user score or computer score gets to 5
