--- a/index.html
+++ b/index.html
@@ -6,14 +6,14 @@
     </head>
     <body>
         <div id="container">
+            <h3>Choose your weapon.</h3>
             <div>
                 <button id="rock">Rock</button>
                 <button id="paper">Paper</button>
                 <button id="scissors">Scissors</button>
             </div>
-            <div>
-                <h3>Choose your weapon.</h3>
-            </div>
+            <div id="commentator"></div>
+            <div id="scoreboard"><p>You: 0 Computer: 0</p></div>
         </div>
         <script src="/Users/miloolfindo/repos/rock-paper-scissors/rps.js"></script>
     </body>
