Remove getHumanChoice and logic for ending game

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
                 <button id="paper">Paper</button>
                 <button id="scissors">Scissors</button>
             </div>
-            <div id="commentator"></div>
+            <div id="commentator">Defeat the computer in a game of rock-paper-scissors.</div>
             <div id="scoreboard"><p>You: 0 Computer: 0</p></div>
         </div>
         <script src="/Users/miloolfindo/repos/rock-paper-scissors/rps.js"></script>
